--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
     <string name="app_name">ImagePlusPlus</string>
-    <string name="action_refresh">Refresh</string>
+    <string name="title_activity_welcom">Welcome</string>
     <string name="login">Login</string>
+    <string name="action_refresh">Refresh</string>
     <string name="activity_login">Login I++</string>
     <string name="user_password">Password</string>
     <string name="user_username">Username</string>
-    <string name="title_activity_welcom">Welcome</string>
     <string name="hint_email">EMAIL</string>
     <string name="hint_password">PASSWORD</string>
     <string name="btn_login">LOGIN</string>
+    <string name="btn_camera">CAMERA</string>
+    <string name="welcome">WELCOME</string>
+    <string name="btn_bypass">BYPASS</string>
 </resources>
