--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">I++</string>
+    <string name="app_name">Image++</string>
     <string name="title_activity_welcom">Welcome</string>
     <string name="login">Login</string>
     <string name="action_refresh">Refresh</string>
     <string name="activity_login">Login I++</string>
     <string name="user_password">Password</string>
     <string name="user_username">Username</string>
-    <string name="hint_email">EMAIL</string>
-    <string name="hint_password">PASSWORD</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_camera">CAMERA</string>
     <string name="welcome">WELCOME</string>
