--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="activity_login">Login I++</string>
     <string name="user_password">Password</string>
     <string name="user_username">Username</string>
-    <string name="hint_email">Email</string>
+    <string name="hint_email">Username</string>
     <string name="hint_password">Password</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_camera">CAMERA</string>
